--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "jsbarcode": "^3.12.1",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
-    "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4"
   }
 }
